WIP clone hsp, api spec, view
